--- a/InnovateNSUT-master/scss/style.scss
+++ b/InnovateNSUT-master/scss/style.scss
@@ -187,6 +187,15 @@ body {
   }
 }
 
+#vaccine {
+  background: #b7f0da;
+
+  #imageDisplay {
+    height: 200px;
+    width: 200px;
+  }
+}
+
 @media (max-width: 768px) {
   .mb-tab {
     margin-bottom: 10px;
