--- a/InnovateNSUT-master/views/contact.ejs
+++ b/InnovateNSUT-master/views/contact.ejs
@@ -16,7 +16,7 @@
   <body>
     <nav class="navbar navbar-expand-sm bg-primary navbar-light sticky-top">
       <div class="container">
-        <a href="index" class="navbar-brand">HelTH+</a>
+        <a href="index" class="navbar-brand"><img src="img/logo.png"></a>
         <button
           class="navbar-toggler"
           data-toggle="collapse"
