--- a/InnovateNSUT-master/views/index.ejs
+++ b/InnovateNSUT-master/views/index.ejs
@@ -28,7 +28,7 @@
   <body>
     <nav class="navbar navbar-expand-sm bg-primary navbar-light sticky-top">
       <div class="container">
-        <a href="index.html" class="navbar-brand">HelTH+</a>
+        <a href="index.html" class="navbar-brand"><img src="img/logo.png"></a>
         <button
           class="navbar-toggler"
           data-toggle="collapse"
@@ -39,19 +39,19 @@
         <div id="navbarCollapse" class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a href="index.html" class="nav-link active">Home</a>
+              <a href="index" class="nav-link active">Home</a>
             </li>
             <li class="nav-item">
-              <a href="vaccination.html" class="nav-link">Vaccination</a>
+              <a href="vaccination" class="nav-link">Vaccination</a>
             </li>
             <li class="nav-item">
-              <a href="appointment.html" class="nav-link">Appointments</a>
+              <a href="appointment" class="nav-link">Appointments</a>
             </li>
             <li class="nav-item">
-              <a href="login.html" class="nav-link">Profile</a>
+              <a href="login" class="nav-link">Profile</a>
             </li>
             <li class="nav-item">
-              <a href="contact.html" class="nav-link">Contact Us</a>
+              <a href="contact" class="nav-link">Contact Us</a>
             </li>
           </ul>
         </div>
