--- a/InnovateNSUT-master/views/vaccination.ejs
+++ b/InnovateNSUT-master/views/vaccination.ejs
@@ -16,7 +16,7 @@
   <body>
     <nav class="navbar navbar-expand-sm bg-primary navbar-light sticky-top">
       <div class="container">
-        <a href="index.html" class="navbar-brand">HelTH+</a>
+        <a href="index" class="navbar-brand"><img src="img/logo.png"></a>
         <button
           class="navbar-toggler"
           data-toggle="collapse"
@@ -30,7 +30,7 @@
               <a href="index" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
-              <a href="vaccination" class="nav-link active">Vaccination</a>
+              <a href="vaccine" class="nav-link active">Vaccination</a>
             </li>
             <li class="nav-item">
               <a href="appointment" class="nav-link">Appointments</a>
@@ -52,11 +52,13 @@
         <div class="row">
           <div class="col-md-6 mx-auto text-center">
             <h1 class="mb-3">Vaccination Status</h1>
-            <div id="imageDisplay"></div>
+            <div id="imageDisplay" class="mx-auto"></div>
             <br />
             <div id="profileDisplay"></div>
             <br />
+            <form method="POST" action="/vaccination">
             <button class="btn btn-primary btn-block" data-toggle="modal" data-target="#bookSlot">Book Vaccine Slot</button>
+          </form>
             <button id="next" class="btn btn-dark btn-block">Next</button>
           </div>
         </div>
@@ -77,7 +79,7 @@
     </footer>
 
     <!-- Vaccine MODAL -->
-    <div class="modal fade" id="bookSlot">
+     <div class="modal fade" id="bookSlot">
       <div class="modal-dialog modal-lg">
         <div class="modal-content">
           <div class="modal-header bg-primary text-white">
@@ -87,39 +89,13 @@
             </button>
           </div>
           <div class="modal-body">
-            <form>
-              <div class="form-group">
-                <label for="name">Name</label>
-                <input
-                  id="name"
-                  name="name"
-                  type="text"
-                  placeholder="Name"
-                  class="form-control"
-                />
-                <div class="invalid-feedback">Invalid Name</div>
-              </div>
-              <div class="form-group">
-                <label for="email">Email</label>
-                <input
-                  id="email"
-                  name="email"
-                  type="text"
-                  placeholder="Email"
-                  class="form-control"
-                />
-                <div class="invalid-feedback">Invalid Email</div>
-              </div>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button type="submit" class="btn btn-success" data-dismiss="modal">
-              Submit Application
-            </button>
+            <div class="alert bg-success">
+              <i class="fas fa-check"></i> Your application has been Submitted.
+            </div>
           </div>
         </div>
       </div>
-    </div>
+    </div> 
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
