--- a/InnovateNSUT-master/views/login.ejs
+++ b/InnovateNSUT-master/views/login.ejs
@@ -11,8 +11,9 @@
       src="https://kit.fontawesome.com/9caaa1478d.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/login.css" />
-  </<link rel="shortcut icon" type="image/x-icon" href="https://media.flaticon.com/dist/min/img/favicon.ico" /></head>
+    <link rel="shortcut icon" type="image/x-icon" href="https://media.flaticon.com/dist/min/img/favicon.ico" /></head>
 
   <body>
     
@@ -25,8 +26,11 @@
             <span>Use your email for registration</span>
             <input type="text" placeholder="Name" name="name" />
             <input type="email" placeholder="Email" name="username" />
-            <input type="age" placeholder="Age" name="age" />
-            <input type="gender" placeholder="Gender" name="gender" />
+            <input type="number" placeholder="Age" name="age" />
+            <select name="gender">
+              <option value="male">Male</option>
+              <option value="female">Female</option>
+            </select>
             <input type="password" placeholder="Password" name="password" />
             <button>Sign Up</button>
           </form>
@@ -34,15 +38,8 @@
         <div class="form-container sign-in-container">
           <form action="/login" method="POST">
            
+            <a href="index" class="text-center">img.img-flui</a>
             <h1>Sign in</h1>
-            <div class="social-container">
-              <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-              <a href="/auth/google" class="social"
-                ><i class="fab fa-google-plus-g"></i
-              ></a>
-              <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
-            </div>
-            <span>or use your account</span>
             <input type="email" placeholder="Email" name="username" />
             <input type="password" placeholder="Password" name="password" />
             <a href="#">Forgot your password?</a>
