--- a/InnovateNSUT-master/views/profile.ejs
+++ b/InnovateNSUT-master/views/profile.ejs
@@ -67,6 +67,9 @@
                   <div class="mt-3">
                     <h4><%= patientName %></h4>
                   </div>
+                  <form method="GET" action="/login">
+                    <button class="btn btn-danger mx-auto" type="submit">Logout</button>
+                  </form>
                 </div>
               </div>
             </div>
