--- a/InnovateNSUT-master/public/css/login.css
+++ b/InnovateNSUT-master/public/css/login.css
@@ -4,6 +4,18 @@
   box-sizing: border-box;
 }
 
+/* Media Queries: Tablet Landscape */
+@media screen and (max-width: 1060px) {
+  #primary { width:67%; }
+  #secondary { width:30%; margin-left:3%;}  
+}
+
+/* Media Queries: Tabled Portrait */
+@media screen and (max-width: 768px) {
+  #primary { width:100%; }
+  #secondary { width:100%; margin:0; border:none; }
+}
+
 body {
   background: #f6f5f7;
   display: flex;
@@ -231,4 +243,9 @@ select {
   margin: 0 5px;
   height: 40px;
   width: 40px;
+}
+
+img {
+  height: 100px;
+  width: 100px;
 }
