--- a/InnovateNSUT-master/views/contact.ejs
+++ b/InnovateNSUT-master/views/contact.ejs
@@ -36,7 +36,7 @@
               <a href="appointment" class="nav-link">Appointments</a>
             </li>
             <li class="nav-item">
-              <a href="login" class="nav-link">Profile</a>
+              <a href="profile" class="nav-link">Profile</a>
             </li>
             <li class="nav-item">
               <a href="contact" class="nav-link active">Contact Us</a>
@@ -143,7 +143,7 @@
                   class="img-fluid rounded-circle w-50 mb-3"
                 />
                 <h3>Ayush RajPurohit Tenguria</h3>
-                <h5 class="text-muted">Lead Backend Developer</h5>
+                <h5 class="text-muted">Backend Developer</h5>
                 <p>
                   Myself a full stack developer, a cybersecurity enthusiast and a guitarist, currently a B.Tech fresher at NSUT.
                 </p>
@@ -175,7 +175,7 @@
                   class="img-fluid rounded-circle w-50 mb-3"
                 />
                 <h3>Shirishti Jain</h3>
-                <h5 class="text-muted">Backend Developer</h5>
+                <h5 class="text-muted">Lead Backend Developer</h5>
                 <p>
                   I am a BTech aspirant.I have keen interest in CP, full stack web development 
                   Programming languages:Java and C++
