--- a/InnovateNSUT-master/views/appointment.ejs
+++ b/InnovateNSUT-master/views/appointment.ejs
@@ -38,7 +38,7 @@
               >
             </li>
             <li class="nav-item">
-              <a href="login" class="nav-link">Profile</a>
+              <a href="profile" class="nav-link">Profile</a>
             </li>
             <li class="nav-item">
               <a href="contact" class="nav-link">Contact Us</a>
