--- a/InnovateNSUT-master/views/index.ejs
+++ b/InnovateNSUT-master/views/index.ejs
@@ -48,7 +48,7 @@
               <a href="appointment" class="nav-link">Appointments</a>
             </li>
             <li class="nav-item">
-              <a href="login" class="nav-link">Profile</a>
+              <a href="profile" class="nav-link">Profile</a>
             </li>
             <li class="nav-item">
               <a href="contact" class="nav-link">Contact Us</a>
