--- a/InnovateNSUT-master/views/login.ejs
+++ b/InnovateNSUT-master/views/login.ejs
@@ -7,13 +7,19 @@
     <title>helTH+</title>
     <meta name="description" content="The HTML5 Herald" />
     <meta name="author" content="SitePoint" />
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="HandheldFriendly" content="true">
     <script
       src="https://kit.fontawesome.com/9caaa1478d.js"
       crossorigin="anonymous"
     ></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/login.css" />
-    <link rel="shortcut icon" type="image/x-icon" href="https://media.flaticon.com/dist/min/img/favicon.ico" /></head>
+    <link rel="shortcut icon" type="image/x-icon" href="https://media.flaticon.com/dist/min/img/favicon.ico" />.
+    
+  </head>
 
   <body>
     
@@ -28,8 +34,8 @@
             <input type="email" placeholder="Email" name="username" />
             <input type="number" placeholder="Age" name="age" />
             <select name="gender">
-              <option value="male">Male</option>
-              <option value="female">Female</option>
+              <option value="Male">Male</option>
+              <option value="Female">Female</option>
             </select>
             <input type="password" placeholder="Password" name="password" />
             <button>Sign Up</button>
@@ -38,7 +44,7 @@
         <div class="form-container sign-in-container">
           <form action="/login" method="POST">
            
-            <a href="index" class="text-center">img.img-flui</a>
+            <a href="index"><img src="img/logo.png"></a>
             <h1>Sign in</h1>
             <input type="email" placeholder="Email" name="username" />
             <input type="password" placeholder="Password" name="password" />
