--- a/InnovateNSUT-master/views/appointment.ejs
+++ b/InnovateNSUT-master/views/appointment.ejs
@@ -191,7 +191,7 @@
         </p>
         <div class="row">
           <div class="col-md-6">
-            <div class="card card-body mb-2 mb-mob">
+            <div class="card card-body mb-2 mb-mob bg-dark text-white">
               <div class="d-flex justify-content-center align-items-center">
                 <img src="img/doctor1.jpg" class="img-fluid rounded-circle" />
                 <div class="card-content text-center">
@@ -201,9 +201,10 @@
                   <p>ramesh@gmail.com</p>
                   <form method="POST" action="/appointment/Cardiologist">
                   <button
-                    class="btn btn-primary"
+                    class="btn btn-outline-primary"
+                    data-toggle="modal"
+                    data-target="#myModal"
                   >
-              
                     Book Appointment
                   </button>
                 </form>
@@ -212,7 +213,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <div class="card card-body mb-2 mb-mob">
+            <div class="card card-body mb-2 mb-mob bg-dark text-white">
               <div class="d-flex justify-content-center align-items-center">
                 <img src="img/doctor2.jpg" class="img-fluid rounded-circle" />
                 <div class="card-content text-center">
@@ -222,10 +223,10 @@
                   <p>kk23@hotmail.com</p>
                   <form method="POST" action="/appointment/Radiologist">
                   <button
-                    class="btn btn-primary"
-                    
-                  >
-                
+                    class="btn btn-outline-primary"
+                    data-toggle="modal"
+                    data-target="#myModal"                    
+                  >                
                     Book Appointment
                   </button>
                 </form>
@@ -236,7 +237,7 @@
         </div>
         <div class="row">
           <div class="col-md-6">
-            <div class="card card-body mb=mob">
+            <div class="card card-body mb-mob bg-dark text-white">
               <div class="d-flex justify-content-center align-items-center">
                 <img src="img/doctor3.jpg" class="img-fluid rounded-circle" />
                 <div class="card-content text-center">
@@ -246,10 +247,10 @@
                   <p>harishc@gmail.com</p>
                   <form method="POST" action="/appointment/Orthologist">
                   <button
-                    class="btn btn-primary"
-                   
-                  >
-                
+                    class="btn btn-outline-primary"
+                    data-toggle="modal"
+                    data-target="#myModal"                  
+                  >                
                     Book Appointment
                   </button>
                 </form>
@@ -258,7 +259,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <div class="card card-body">
+            <div class="card card-body bg-dark text-white">
               <div class="d-flex justify-content-center align-items-center">
                 <img src="img/doctor4.jpg" class="img-fluid rounded-circle" />
                 <div class="card-content text-center">
@@ -268,10 +269,10 @@
                   <p>pmalhotra@gmail.com</p>
                   <form method="POST" action="/appointment/Dentist">
                   <button
-                    class="btn btn-primary"
-                   
-                  >
-                  
+                    class="btn btn-outline-primary"
+                    data-toggle="modal"
+                    data-target="#myModal"                   
+                  >                  
                     Book Appointment
                   </button>
                 </form>
