--- a/InnovateNSUT-master/views/contact.ejs
+++ b/InnovateNSUT-master/views/contact.ejs
@@ -121,7 +121,7 @@
                   ></textarea>
                 </div>
               </div>
-              <button type="submit" class="btn btn-primary btn-block">
+              <button type="submit" class="btn btn-primary btn-block" data-toggle="modal" data-target="#successModal">
                 Submit
               </button>
             </form>
@@ -332,6 +332,25 @@
         </div>
       </div>
     </footer>
+
+    <!-- Contact MODAL -->
+    <div class="modal fade" id="successModal">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header bg-primary text-white">
+            <h5 class="modal-title">Contact Us</h5>
+            <button class="close" data-dismiss="modal">
+              <span>&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="alert bg-success">
+              <i class="fas fa-check"></i> Your form has been recorded.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
