--- a/InnovateNSUT-master/views/index.ejs
+++ b/InnovateNSUT-master/views/index.ejs
@@ -151,7 +151,7 @@
                 <i class="fas fa-virus fa-3x mb-2"></i>
                 <h3 class="card-title">Covid Tracker</h3>
                 <p class="lead">See the national covid cases stats</p>
-                <a href="covid.html" class="btn btn-outline-secondary"
+                <a href="https://www.google.com/search?q=covid+cases" class="btn btn-outline-secondary"
                   >See Stats</a
                 >
               </div>
@@ -164,8 +164,8 @@
               >
                 <i class="fas fa-syringe fa-3x mb-2"></i>
                 <h3 class="card-title">Vaccination</h3>
-                <p class="lead">Lorem ipsum dolor sit amet consecgdt</p>
-                <a href="#" class="btn btn-outline-secondary"
+                <p class="lead">Check here the availability of vaccines at different centres.</p>
+                <a href="vaccination" class="btn btn-outline-secondary"
                   >Vaccines available</a
                 >
               </div>
@@ -178,8 +178,8 @@
               >
                 <i class="fas fa-user-md fa-3x mb-2"></i>
                 <h3 class="card-title">Experts' Advice</h3>
-                <p class="lead">Interact with our specialist doctors.</p>
-                <a href="#" class="btn btn-outline-secondary">Contact Them</a>
+                <p class="lead">Contact our specialist doctors and interact with them.</p>
+                <a href="appointment" class="btn btn-outline-secondary">Contact Them</a>
               </div>
             </div>
           </div>
@@ -190,8 +190,8 @@
               >
                 <i class="fas fa-users fa-3x mb-2"></i>
                 <h3 class="card-title">Profile</h3>
-                <p class="lead">Lorem ipsum dolor sit amet consectetur</p>
-                <a href="#" class="btn btn-outline-secondary">See Profile</a>
+                <p class="lead">Have a look at the profile.</p>
+                <a href="profile" class="btn btn-outline-secondary">See Profile</a>
               </div>
             </div>
           </div>
