--- a/InnovateNSUT-master/views/profile.ejs
+++ b/InnovateNSUT-master/views/profile.ejs
@@ -6,6 +6,8 @@
 <% var patientProfilePic; %>
 <% var patientPreviousAppointment; %>
 <% var patientUpcomingAppointment; %>
+<% var patientPreviousMedicalIssue; %>
+<% var patientUpcomingMedicalIssue; %>
 
 
 <html lang="en">
@@ -70,7 +72,7 @@
                   <div class="mt-3">
                     <h4><%= patientName %></h4>
                   </div>
-                  <form method="GET" action="/login">
+                  <form method="GET" action="/logout">
                     <button class="btn btn-danger mx-auto" type="submit">Logout</button>
                   </form>
                 </div>
@@ -111,7 +113,7 @@
       <div class="card-body">
         <h5 class="card-title">View previous appointment.</h5>
         <p class="card-text">
-          <%= patientPreviousAppointment %>
+          Your previous appointment for <%= patientPreviousMedicalIssue %> was on <%= patientPreviousAppointment %>
         </p>
         
       </div>
@@ -121,7 +123,7 @@
       <div class="card-body">
         <h5 class="card-title">View Upcoming Appointment.</h5>
         <p class="card-text">
-          <%=  patientUpcomingAppointment %>
+          Your upcoming appointment for <%=  patientUpcomingMedicalIssue %> is on  <%= patientUpcomingAppointment %>
         </p>
         
       </div>
