--- a/InnovateNSUT-master/views/index.ejs
+++ b/InnovateNSUT-master/views/index.ejs
@@ -8,6 +8,8 @@
       src="https://kit.fontawesome.com/9caaa1478d.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Yusei+Magic&display=swap" rel="stylesheet"/>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css"
@@ -28,7 +30,7 @@
   <body>
     <nav class="navbar navbar-expand-sm bg-primary navbar-light sticky-top">
       <div class="container">
-        <a href="index.html" class="navbar-brand"><img src="img/logo.png"></a>
+        <a href="index" class="navbar-brand"><img src="img/logo.png"></a>
         <button
           class="navbar-toggler"
           data-toggle="collapse"
@@ -164,7 +166,7 @@
               >
                 <i class="fas fa-syringe fa-3x mb-2"></i>
                 <h3 class="card-title">Vaccination</h3>
-                <p class="lead">Check here the availability of vaccines at different centres.</p>
+                <p class="lead">Check availability of vaccines at different centres.</p>
                 <a href="vaccination" class="btn btn-outline-secondary"
                   >Vaccines available</a
                 >
@@ -178,7 +180,7 @@
               >
                 <i class="fas fa-user-md fa-3x mb-2"></i>
                 <h3 class="card-title">Experts' Advice</h3>
-                <p class="lead">Contact our specialist doctors and interact with them.</p>
+                <p class="lead">Contact and interact with our specialist doctors.</p>
                 <a href="appointment" class="btn btn-outline-secondary">Contact Them</a>
               </div>
             </div>
@@ -218,11 +220,11 @@
                       class="img-fluid rounded-circle mx-5"
                     />
                     <blockquote>
-                      <p class="lead">
+                      <p class="lead text-white font-weight-bold">
                         Would recommend to everyone. One of the best services
                         emerged out in this pandemic.
                       </p>
-                      <footer class="blockquote-footer">Priya Aggarwal</footer>
+                      <footer class="blockquote-footer text-dark font-weight-bold">Priya Aggarwal</footer>
                     </blockquote>
                   </div>
                 </div>
@@ -236,8 +238,10 @@
                       class="img-fluid rounded-circle mx-5"
                     />
                     <blockquote>
-                      <p class="lead">Really awesome. Loved it...</p>
-                      <footer class="blockquote-footer">Ankita Rana</footer>
+                      <p class="lead text-white font-weight-bold">I chose to get the vaccine because I don’t want to get COVID and this website really helped me a lot for fast services.
+
+                        </p>
+                      <footer class="blockquote-footer text-dark font-weight-bold">Ankita Rana</footer>
                     </blockquote>
                   </div>
                 </div>
@@ -251,8 +255,8 @@
                       class="img-fluid rounded-circle mx-5"
                     />
                     <blockquote>
-                      <p class="lead">Marvellous! Supreme!</p>
-                      <footer class="blockquote-footer">Mohit Singh</footer>
+                      <p class="lead text-white font-weight-bold">Vaccinations are the quickest way to get back to being together again. This website is the best service one can provide for patient and doctor.</p>
+                      <footer class="blockquote-footer text-dark font-weight-bold">Mohit Singh</footer>
                     </blockquote>
                   </div>
                 </div>
