--- a/InnovateNSUT-master/views/login.ejs
+++ b/InnovateNSUT-master/views/login.ejs
@@ -14,6 +14,8 @@
       src="https://kit.fontawesome.com/9caaa1478d.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Yusei+Magic&display=swap" rel="stylesheet"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/login.css" />
